Made changes to all classes
Updated the classes to reflect my current style of coding. Reduced some lines of code for better readability.

--- a/HW 02 - Polynomial Calculator/build.gradle
+++ b/HW 02 - Polynomial Calculator/build.gradle
@@ -26,4 +26,6 @@ repositories {
 // Access JUnit testing library
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'
 }
